k8s/rollout-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: app
        istio-injection: enabled
    spec:
      containers:
      - name: app
        image: docker.io/cmwylie19/test-argo-rollouts:v2
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: app-canary
      stableService: app-stable 
      # analysis:
      #   startingStep: 1
      #   templates:
      #   - templateName: istio-success-rate
      #   args:
      #   - name: service
      #     value: app-canary
      #   - name: namespace
      #     valueFrom:
      #       fieldRef:
      #         fieldPath: metadata.namespace
      canaryMetadata:
        annotations:
          role: canary
        labels:
          role: canary
      stableMetadata:
        annotations:
          role: stable
        labels:
          role: stable
      trafficRouting:
        istio:
          virtualService:
            name: app
            routes:
            - primary 
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
      - setWeight: 100
      - pause: {}     
  revisionHistoryLimit: 2
