k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app
    # version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: app-stable
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app
    # version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app
