k8s/vs-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - name: primary
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app
        port:
          number: 8080
      weight: 100
    - destination:
        host: app-canary
        port:
          number: 8080
      weight: 0
